# nrp-algo

./: .gitignore  CMakeLists.txt  LICENSE.md
.github/workflows/: cmake-multi-platform.yml
embed/: embed.c
lib/libtorch/: FindTorch.cmake
lib/postgres/: FindPostgres.cmake
lib/raylib/: FindRaylib.cmake
lib/tinyxml/: FindTinyxml.cmake
notebooks/: .gitignore  continuous_vs_discrete_example_3d_function.py  example_3d_function.py  main.py  predictable_vs_unpredictable_example_3d_function.py
resources/NrpProblemInstances/: Instance1.txt  Instance11.txt  Instance13.txt  Instance2.txt  Instance3.txt  Instance7.txt
src/example/: Application.cpp  Application.h  ApplicationState.h  ConcurrentData.h  Database.h  Example.h  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Main.cpp  ShiftDataAccumulator.h  SkillDataAccumulator.h  UserDataAccumulator.cpp  UserDataAccumulator.h  WindowsUtils.c
src/example/Examples/: Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp
src/example/GUI/: Scene.cpp  Scene.h
src/example/GUI/Scenes/: ScoreStatisticsScene.cpp  ScoreStatisticsScene.h  TimetableScene.cpp  TimetableScene.h
src/example/NrpProblemInstances/: NrpProblemInstanceParser.cpp  NrpProblemInstanceParser.h  NrpProblemSerializer.cpp  NrpProblemSerializer.h
src/example/Plannista/: SkillDataAccumulator.h
src/main/Array/: BitArray.cpp  BitArray.h  BitMatrix.cpp  BitMatrix.h  BitSquareMatrix.cpp  BitSquareMatrix.h  BitSymmetricalMatrix.cpp  BitSymmetricalMatrix.h
src/main/Constraints/: Constraint.h  ConstraintScore.h  Violation.h
src/main/Domain/Constraints/: CumulativeFatigueConstraint.h  DomainConstraint.h  EmployeeAvailabilityConstraint.h  EmployeeGeneralConstraint.h  EmploymentMaxDurationConstraint.h  NoOverlapConstraint.h  RequiredSkillConstraint.h  RestBetweenShiftsConstraint.h  ShiftCoverageConstraint.h  ShiftMinAndMaxEmploymentConstraint.h  ValidShiftDayConstraint.h
src/main/Domain/Entities/: Day.cpp  Day.h  Employee.cpp  Employee.h  Shift.cpp  Shift.h  Skill.cpp  Skill.h
src/main/Domain/Heuristics/: AddCoverShiftsPerturbator.h  DomainHeuristicProvider.h  DomainPerturbator.h  RandomAssignmentTogglePerturbator.h  ValidShiftDayPerturbator.h  ValidShiftDayRepairPerturbator.h
src/main/Domain/Moves/: AddCoverShiftsPerturbator.h  DomainPerturbator.h  RandomAssignmentTogglePerturbator.h  ValidShiftDayRepairPerturbator.h
src/main/Domain/State/: DomainState.h
src/main/Heuristics/: AutonomousPerturbator.h  HeuristicProvider.h  Perturbator.h  PerturbatorChain.h
src/main/Heuristics/Default/: HorizontalExchangePerturbator.h  UnassignRepairPerturbator.h  VerticalExchangePerturbator.h
src/main/Heuristics/Default/Structs/: HorizontalExchangeAssignLocation.h  VerticalExchangeAssignLocation.h
src/main/HyperHeuristics/: TransformerModel.h
src/main/HyperHeuristics/Heuristics/: AssignPerturbator.h  UnassignPerturbator.h
src/main/IO/: StateFile.cpp  StateFile.h  StatisticsFile.cpp  StatisticsFile.h
src/main/Memory/: AllocationMetrics.h  MemoryUsageDebug.cpp
src/main/Moves/: AssignPerturbator.h  AutonomousPerturbator.h  HorizontalExchangePerturbator.h  Move.h  Perturbator.h  PerturbatorChain.h  RandomAssignmentTogglePerturbator.h  RankedIntersectionTogglePerturbator.h  ShiftByZPerturbator.h  UnassignPerturbator.h  UnassignRepairPerturbator.h  VerticalExchangePerturbator.h
src/main/Moves/Structs/: HorizontalExchangeAssignLocation.h  VerticalExchangeAssignLocation.h
src/main/Score/: Score.h
src/main/Search/: Evaluation.h  LocalSearch.cpp  LocalSearch.h  LocalSearchStep.cpp  LocalSearchStep.h  LocalSearchTask.cpp  LocalSearchTask.h  Search.h
src/main/Search/Implementation/: DlasLocalSearchTask.h  LahcLocalSearchTask.h  LateAcceptanceLocalSearchTask.h  SaLocalSearchTask.h  TabuMoveLocalSearchTask.h  TabuStateLocalSearchTask.h
src/main/State/: Axes.h  Location.h  Size.h  State.cpp  State.h
src/main/Statistics/: ScoreStatistics.cpp  ScoreStatistics.h  Statistics.h  StepsPerSecondStatistics.cpp  StepsPerSecondStatistics.h
src/main/Time/: Constants.h  DailyInterval.cpp  DailyInterval.h  Range.cpp  Range.h  RangeCollection.h  Ray.cpp  Ray.h
src/main/Utils/: Random.h  SimdUtils.h  StringUtils.h
src/resources/: embedded_resources.h
src/tests/: AddTests.cmake  CMakeLists.txt  dummy_test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
